--- a/ChatApp/View/Windows/ChatMessage.xaml
+++ b/ChatApp/View/Windows/ChatMessage.xaml
@@ -16,7 +16,7 @@
         </ListBox>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom">
             <TextBox x:Name="txtSendMessage" Width="200" Margin="20"/>
-            <Button Name="SendBtn" Margin="20" Width="200" Height="40" Content="Send" />
+            <Button Name="SendBtn" Margin="20" Width="200" Height="40" Content="Send" Click="SendMessage"/>
         </StackPanel>
     </Grid>
 </Window>
